--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">x</h2>
+    	<h2 style="color:#F2B300;">D</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">k</h2>
+    	<h2 style="color:#0719D4;">E</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">l</h2>
+    	<h2 style="color:#D14D39;">S</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">p</h2>
+    	<h2 style="color:#8FAD00;">T</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">j</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">r</h2>
+    	<h2 style="color:#99C96A;">R</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">t</h2>
+    	<h2 style="color:#20CFB4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -126,7 +126,7 @@
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
 				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
+				<p>thanks for be nice person</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
@@ -157,7 +157,8 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday</p>
+				<p>happy birthday bu guru</p>
+				<p>CIEEE TUAAAAAAAAAAAAA</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
